Completes footer at 320x480

--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
   </section>
   <footer>
     <div class="footer">
+      <div class="follow-bottom">
+        <div class="twitter bottom corner"><a class="foot-text" href="https://twitter.com/elmeltone"><i class="fa fa-twitter-square"></i></a></div>
+        <div class="github bottom"><a class="foot-text" href="https://github.com/elmeltone"><i class="fa fa-github-square"></i></a></div>
+        <div class="linkedin bottom"><a class="foot-text" href="https://linkedin.com/in/elmeltone"><i class="fa fa-linkedin-square"></i></a></div>
+      </div>
+      <div class="logo-wrapper-bottom">
+        <img class="logo-bottom" src="images/MeltWebs_Logo_3.0.svg" alt="MeltWebs logo">
+        <p class="built-by">This site was custom built by</p>
+      </div>
     </div>
   </footer>
 
