Adds final home page copy and format at 320x480

--- a/index.html
+++ b/index.html
@@ -52,14 +52,31 @@
   <section>
     <div class="description">
       <div class="dev-wrapper">
-        <h4 class="describe-title">Web Development</h4>
-        <p class="describe">MeltWebs is a full stack JavaScript web developer, specializing in the MERN stack (MongoDB, Express, React, and Node). Services offered include webpage creation, JavaScript and layout repair, site enhancements, and mobile interfaces for iOS and Android via React Native.</p>
-        <button class="glossary js">Why JavaScript?</button>
+        <h4 class="describe-title">MeltWebs specializes in JavaScript web development with the MERN stack:<br> MongoDB | Express | React | Node</h4>
+        <p class="describe">Services offered include webpage creation, site enhancements and repairs, search engine optimization, and mobile interfaces for iOS and Android.</p>
       </div>
-      <div class="engine-wrapper">
-        <h4 class="describe-title">Search Engine Optimization</h4>
-        <p class="describe">SEO is the art of bringing more users to your site, typically through higher Google rankings. MeltWebs can help your audience find you</p>
-        <button class="glossary seo">Why is SEO important?</button>
+      <div class="details-section-wrapper">
+        <div class="details-wrapper creation">
+          <div class="graphic-wrapper"><i class="fa fa-copyright fa-2x graphic"></i></div>
+          <h4 class="details-title">Webpage Creation</h4>
+          <p class="details">From highly interactive JavaScript to static pages, MeltWebs custom builds websites to fit business needs.</p>
+        </div>
+        <div class="details-wrapper enhancements">
+          <div class="graphic-wrapper"><i class="fa fa-cogs fa-2x graphic"></i></div>
+          <h4 class="details-title">Changes to Your Site</h4>
+          <p class="details">Have a WordPress site that broke? Need enhancements in an existing custom site? MeltWebs has you covered.</p>
+        </div>
+        <div class="details-wrapper seo">
+          <div class="graphic-wrapper"><i class="fa fa-search-plus fa-2x graphic"></i></div>
+          <h4 class="details-title">Search Engine Optimization</h4>
+          <p class="details">SEO is the art of bringing more users to your site, typically through higher Google rankings. MeltWebs can help your audience find you.</p>
+        </div>
+        <div class="details-wrapper mobile">
+          <div class="graphic-wrapper"><i class="fa fa-mobile fa-2x graphic"></i></div>
+          <h4 class="details-title">Mobile Interfaces</h4>
+          <p class="details">Have an IoT project or an app idea? MeltWebs builds mobile apps on both Apple iOS and Android via React Native.</p>
+        </div>
+        <h4 class="describe-title lower">MeltWebs has solutions for the modern web.</h4>
       </div>
     </div>
   </section>
@@ -80,7 +97,7 @@
       </div>
       <div class="logo-wrapper-bottom">
         <img class="logo-bottom" src="images/MeltWebs_Logo_3.0.svg" alt="MeltWebs logo">
-        <p class="built-by">This site was custom built by</p>
+        <p class="built-by">This page was custom built by</p>
       </div>
     </div>
   </footer>
