Adds pages and provacy content

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>MeltWebs | Solutions for the Modern Web</title>
-  <link rel="icon" href="images/MeltWebs_Logo_3.0.svg" />
+  <link rel="icon" href="images/MeltWebs_Logo_3.0_Icon.png" />
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <nav>
     <div class="masthead">
-      <div class="marquee">
+      <a class="no-hover" href="/"><div class="marquee">
         <div class="logo-wrapper">
           <img class="logo" src="images/MeltWebs_Logo_3.0.svg" alt="MeltWebs logo">
         </div>
         <h1 class="title">MeltWebs</h1>
-      </div>
+      </div></a>
       <div class="nav-options">
         <div class="line-wrapper">
           <div class="line dark"></div>
@@ -26,10 +26,10 @@
       </div>
     </div>
       <div class="options-wrapper icon-unclicked">
-        <div class="options explore"><a href="">ABOUT</a></div>
-        <div class="options quote"><a href="">CONTACT</a></div>
-        <div class="options blog"><a href="">BLOG</a></div>
-        <div class="options collaborate"><a href="">SERVICES</a></div>
+        <div class="options explore"><a href="pages/about.html">ABOUT</a></div>
+        <div class="options quote"><a href="pages/contact.html">CONTACT</a></div>
+        <div class="options blog"><a href="pages/blog.html">BLOG</a></div>
+        <div class="options collaborate"><a href="pages/privacy.html">PRIVACY</a></div>
       </div>
   </nav>
   <section>
@@ -43,9 +43,9 @@
     <div class="follow-wrapper">
       <div class="follow">
         <div class="follow-text">Follow the blog on social media: </div>
-        <div class="twitter"><a href="https://twitter.com/elmeltone"><i class="fa fa-twitter-square"></i></a></div>
-        <div class="github"><a href="https://github.com/elmeltone"><i class="fa fa-github-square"></i></a></div>
-        <div class="linkedin"><a href="https://linkedin.com/in/elmeltone"><i class="fa fa-linkedin-square"></i></a></div>
+        <div class="twitter"><a href="https://twitter.com/elmeltone" target="blank"><i class="fa fa-twitter-square"></i></a></div>
+        <div class="github"><a href="https://github.com/elmeltone" target="blank"><i class="fa fa-github-square"></i></a></div>
+        <div class="linkedin"><a href="https://linkedin.com/in/elmeltone" target="blank"><i class="fa fa-linkedin-square"></i></a></div>
       </div>
     </div>
   </section>
@@ -57,7 +57,7 @@
       </div>
       <div class="details-section-wrapper">
         <div class="details-wrapper creation">
-          <div class="graphic-wrapper"><i class="fa fa-copyright fa-2x graphic"></i></div>
+          <div class="graphic-wrapper"><i class="fa fa-code fa-2x graphic"></i></div>
           <h4 class="details-title">Webpage Creation</h4>
           <p class="details">From highly interactive JavaScript to static pages, MeltWebs custom builds websites to fit business needs.</p>
         </div>
@@ -91,12 +91,12 @@
   <footer>
     <div class="footer">
       <div class="follow-bottom">
-        <div class="twitter bottom corner"><a class="foot-text" href="https://twitter.com/elmeltone"><i class="fa fa-twitter-square"></i></a></div>
-        <div class="github bottom"><a class="foot-text" href="https://github.com/elmeltone"><i class="fa fa-github-square"></i></a></div>
-        <div class="linkedin bottom"><a class="foot-text" href="https://linkedin.com/in/elmeltone"><i class="fa fa-linkedin-square"></i></a></div>
+        <div class="twitter bottom corner"><a class="foot-text" href="https://twitter.com/elmeltone" target="blank"><i class="fa fa-twitter-square"></i></a></div>
+        <div class="github bottom"><a class="foot-text" href="https://github.com/elmeltone" target="blank"><i class="fa fa-github-square"></i></a></div>
+        <div class="linkedin bottom"><a class="foot-text" href="https://linkedin.com/in/elmeltone" target="blank"><i class="fa fa-linkedin-square"></i></a></div>
       </div>
       <div class="logo-wrapper-bottom">
-        <img class="logo-bottom" src="images/MeltWebs_Logo_3.0.svg" alt="MeltWebs logo">
+        <a href="/"><img class="logo-bottom" src="images/MeltWebs_Logo_3.0.svg" alt="MeltWebs logo"></a>
         <p class="built-by">This page was custom built by</p>
       </div>
     </div>
