Completes first draft at 320x480

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,49 +35,24 @@
   <section>
     <div class="page-body">
       <h2 class="page-title">CONTACT</h2>
-      <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-              <div class="well well-sm">
-                <form class="form-horizontal" action="" method="post">
-                <fieldset>
-                  <legend class="text-center"></legend>
-
-                  <!-- Name input-->
-                  <div class="form-group">
-                    <label class="col-md-3 control-label" for="name">Name</label>
-                    <div class="col-md-9">
-                      <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
-                    </div>
-                  </div>
-
-                  <!-- Email input-->
-                  <div class="form-group">
-                    <label class="col-md-3 control-label" for="email">Your E-mail</label>
-                    <div class="col-md-9">
-                      <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
-                    </div>
-                  </div>
-
-                  <!-- Message body -->
-                  <div class="form-group">
-                    <label class="col-md-3 control-label" for="message">Your message</label>
-                    <div class="col-md-9">
-                      <textarea class="form-control" id="message" name="message" placeholder="Please enter your message here..." rows="5"></textarea>
-                    </div>
-                  </div>
-
-                  <!-- Form actions -->
-                  <div class="form-group">
-                    <div class="col-md-12 text-right">
-                      <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-                    </div>
-                  </div>
-                </fieldset>
-                </form>
-              </div>
-            </div>
-        </div>
+      <div class="contact-option-wrapper">
+        <a href="https://linkedin.com/in/elmeltone" target="blank"><div class="contact-wrapper">
+          <i class="fa fa-linkedin-square fa-2x contact-icon"></i>
+          <h4 class="contact-text">Michael Melton</h4>
+        </div></a>
+        <a href="mailto:michael@meltwebs.com"><div class="contact-wrapper">
+          <i class="fa fa-envelope fa-2x contact-icon"></i>
+          <h4 class="contact-text">michael@meltwebs.com</h4>
+        </div></a>
+        <a href="https://twitter.com/elmeltone" target="blank"><div class="contact-wrapper">
+          <i class="fa fa-twitter-square fa-2x contact-icon"></i>
+          <h4 class="contact-text">@elmeltone</h4>
+        </div></a>
+        <a href="https://github.com/elmeltone" target="blank"><div class="contact-wrapper">
+          <i class="fa fa-github fa-2x contact-icon"></i>
+          <h4 class="contact-text">elmeltone</h4>
+        </div></a>
+      </div>
       </div>
     </div>
   </section>
