--- a/pages/about.html
+++ b/pages/about.html
@@ -35,7 +35,7 @@
   <section>
     <div class="page-body">
       <h2 class="page-title">ABOUT</h2>
-      <p class="page-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      <p class="page-text">MeltWebs is JavaScript developer Michael Melton’s home base for projects, as well as a platform for writing about current issues relating to web development and search engine optimization.</p>
     </div>
   </section>
   <footer>
