Formats at 414x736 and improves menu slide

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MeltWebs | Solutions for the Modern Web</title>
+  <title>MeltWebs | About</title>
   <link rel="icon" href="../images/MeltWebs_Logo_3.0_Icon.png" />
   <link rel="stylesheet" href="../main.css">
 </head>
@@ -26,14 +26,14 @@
       </div>
     </div>
       <div class="options-wrapper icon-unclicked">
-        <div class="options explore"><a href="">ABOUT</a></div>
-        <div class="options quote"><a href="contact.html">CONTACT</a></div>
-        <div class="options blog"><a href="blog.html">BLOG</a></div>
-        <div class="options collaborate"><a href="privacy.html">PRIVACY</a></div>
+        <div class="options blog"><a href="./blog.html">BLOG</a></div>
+        <div class="options quote"><a href="./contact.html">CONTACT</a></div>
+        <div class="options explore"><a href="./about.html">ABOUT</a></div>
+        <div class="options collaborate"><a href="./privacy.html">PRIVACY</a></div>
       </div>
   </nav>
   <section>
-    <div class="page-body">
+    <div class="page-body about-page">
       <h2 class="page-title">ABOUT</h2>
       <p class="page-text">MeltWebs is JavaScript developer Michael Melton’s home base for projects, as well as a platform for writing about current issues relating to web development and search engine optimization.</p>
     </div>
