--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MeltWebs | Solutions for the Modern Web</title>
+  <title>MeltWebs | Blog</title>
   <link rel="icon" href="../images/MeltWebs_Logo_3.0_Icon.png" />
   <link rel="stylesheet" href="../main.css">
 </head>
@@ -26,10 +26,10 @@
       </div>
     </div>
       <div class="options-wrapper icon-unclicked">
-        <div class="options explore"><a href="about.html">ABOUT</a></div>
-        <div class="options quote"><a href="contact.html">CONTACT</a></div>
-        <div class="options blog"><a href="">BLOG</a></div>
-        <div class="options collaborate"><a href="privacy.html">PRIVACY</a></div>
+        <div class="options blog"><a href="./blog.html">BLOG</a></div>
+        <div class="options quote"><a href="./contact.html">CONTACT</a></div>
+        <div class="options explore"><a href="./about.html">ABOUT</a></div>
+        <div class="options collaborate"><a href="./privacy.html">PRIVACY</a></div>
       </div>
   </nav>
   <section>
