--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MeltWebs | Solutions for the Modern Web</title>
+  <title>MeltWebs | Privacy Policy</title>
   <link rel="icon" href="../images/MeltWebs_Logo_3.0_Icon.png" />
   <link rel="stylesheet" href="../main.css">
 </head>
@@ -26,14 +26,14 @@
       </div>
     </div>
       <div class="options-wrapper icon-unclicked">
-        <div class="options explore"><a href="about.html">ABOUT</a></div>
-        <div class="options quote"><a href="contact.html">CONTACT</a></div>
-        <div class="options blog"><a href="blog.html">BLOG</a></div>
-        <div class="options collaborate"><a href="">PRIVACY</a></div>
+        <div class="options blog"><a href="./blog.html">BLOG</a></div>
+        <div class="options quote"><a href="./contact.html">CONTACT</a></div>
+        <div class="options explore"><a href="./about.html">ABOUT</a></div>
+        <div class="options collaborate"><a href="./privacy.html">PRIVACY</a></div>
       </div>
   </nav>
   <section>
-    <div class="page-body">
+    <div class="page-body privacy-page">
       <h2 class="page-title">Privacy Policy for www.meltwebs.com</h2>
       <p class="page-text">At www.meltwebs.com, the privacy of our visitors is of extreme importance to us. This privacy policy document outlines the types of personal information is received and collected by www.meltwebs.com and how it is used.<br><br><span class="bullets">Log Files</span><br>Like many other Web sites, www.meltwebs.com makes use of log files. The information inside the log files includes internet protocol ( IP ) addresses, type of browser, Internet Service Provider ( ISP ), date/time stamp, referring/exit pages, and number of clicks to analyze trends, administer the site, track user’s movement around the site, and gather demographic information. IP addresses, and other such information are not linked to any information that is personally identifiable.<br><br><span class="bullets">Cookies and Web Beacons</span><br>www.meltwebs.com does use cookies to store information about visitors preferences, record user-specific information on which pages the user access or visit, customize Web page content based on visitors browser type or other information that the visitor sends via their browser.<br><br><span class="bullets">DoubleClick DART Cookie</span><br><br>.:: Google, as a third party vendor, uses cookies to serve ads on www.meltwebs.com.<br><br>.:: Google’s use of the DART cookie enables it to serve ads to users based on their visit to www.meltwebs.com and other sites on the Internet.<br><br>.:: Users may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy at the following URL – http://www.google.com/privacy_ads.html<br>Some of our advertising partners may use cookies and web beacons on our site. Our advertising partners include ….<br><br>Google Adsense<br><br>These third-party ad servers or ad networks use technology to the advertisements and links that appear on www.meltwebs.com send directly to your browsers. They automatically receive your IP address when this occurs. Other technologies ( such as cookies, JavaScript, or Web Beacons ) may also be used by the third-party ad networks to measure the effectiveness of their advertisements and / or to personalize the advertising content that you see.<br><br>www.meltwebs.com has no access to or control over these cookies that are used by third-party advertisers.<br><br>You should consult the respective privacy policies of these third-party ad servers for more detailed information on their practices as well as for instructions about how to opt-out of certain practices. www.meltwebs.com’s privacy policy does not apply to, and we cannot control the activities of, such other advertisers or web sites.<br><br>If you wish to disable cookies, you may do so through your individual browser options. More detailed information about cookie management with specific web browsers can be found at the browsers’ respective websites.<br><br>If you require any more information or have any questions about our privacy policy, please feel free to contact us by email at michael@meltwebs.com.</p>
     </div>
