Formats at 500px width

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="shade">
         <h1 class="headline">Need an audience?</h1>
         <h3 class="subtitle">Your fans are searching for you online.</h3>
-        <a href="pages/contact.html"><button class="action seo">Get noticed</button></a>
+        <a href="pages/contact.html"><button class="action">Get noticed</button></a>
       </div>
     </div>
     <div class="follow-wrapper">
