--- a/index.html
+++ b/index.html
@@ -10,27 +10,31 @@
 </head>
 <body>
   <nav>
-    <div class="masthead">
-      <a class="no-hover" href="/"><div class="marquee">
-        <div class="logo-wrapper">
-          <img class="logo" src="images/MeltWebs_Logo_3.0.svg" alt="MeltWebs logo">
+    <div class="nav-wrapper">
+      <div class="masthead-and-options">
+        <div class="masthead">
+          <a class="no-hover" href="/"><div class="marquee">
+            <div class="logo-wrapper">
+              <img class="logo" src="images/MeltWebs_Logo_3.0.svg" alt="MeltWebs logo">
+            </div>
+            <h1 class="title">MeltWebs</h1>
+          </div></a>
+          <div class="nav-options">
+            <div class="line-wrapper">
+              <div class="line dark"></div>
+              <div class="line dark"></div>
+              <div class="line dark"></div>
+            </div>
+          </div>
         </div>
-        <h1 class="title">MeltWebs</h1>
-      </div></a>
-      <div class="nav-options">
-        <div class="line-wrapper">
-          <div class="line dark"></div>
-          <div class="line dark"></div>
-          <div class="line dark"></div>
+        <div class="options-wrapper icon-unclicked">
+          <div class="options privacy"><a href="pages/privacy.html">PRIVACY</a></div>
+          <div class="options about"><a href="pages/about.html">ABOUT</a></div>
+          <div class="options contact"><a href="pages/contact.html">CONTACT</a></div>
+          <div class="options blog"><a href="pages/blog.html">BLOG</a></div>
         </div>
       </div>
     </div>
-      <div class="options-wrapper icon-unclicked">
-        <div class="options blog"><a href="pages/blog.html">BLOG</a></div>
-        <div class="options quote"><a href="pages/contact.html">CONTACT</a></div>
-        <div class="options explore"><a href="pages/about.html">ABOUT</a></div>
-        <div class="options collaborate"><a href="pages/privacy.html">PRIVACY</a></div>
-      </div>
   </nav>
   <section>
     <div class="intro">
@@ -89,15 +93,19 @@
     </div>
   </section>
   <footer>
-    <div class="footer">
-      <div class="follow-bottom">
-        <div class="twitter bottom corner"><a class="foot-text" href="https://twitter.com/elmeltone" target="blank"><i class="fa fa-twitter-square"></i></a></div>
-        <div class="github bottom"><a class="foot-text" href="https://github.com/elmeltone" target="blank"><i class="fa fa-github-square"></i></a></div>
-        <div class="linkedin bottom"><a class="foot-text" href="https://linkedin.com/in/elmeltone" target="blank"><i class="fa fa-linkedin-square"></i></a></div>
-      </div>
-      <div class="logo-wrapper-bottom">
-        <a href="/"><img class="logo-bottom" src="images/MeltWebs_Logo_3.0.svg" alt="MeltWebs logo"></a>
-        <p class="built-by">This page was custom built by</p>
+    <div class="footer-wrapper">
+      <div class="social-and-sig">
+        <div class="footer">
+          <div class="follow-bottom">
+            <div class="twitter bottom corner"><a class="foot-text" href="https://twitter.com/elmeltone" target="blank"><i class="fa fa-twitter-square"></i></a></div>
+            <div class="github bottom"><a class="foot-text" href="https://github.com/elmeltone" target="blank"><i class="fa fa-github-square"></i></a></div>
+            <div class="linkedin bottom"><a class="foot-text" href="https://linkedin.com/in/elmeltone" target="blank"><i class="fa fa-linkedin-square"></i></a></div>
+          </div>
+          <div class="logo-wrapper-bottom">
+            <a href="/"><img class="logo-bottom" src="images/MeltWebs_Logo_3.0.svg" alt="MeltWebs logo"></a>
+            <p class="built-by">This page was custom built by</p>
+          </div>
+        </div>
       </div>
     </div>
   </footer>
