Adds twitter card to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@elmeltone">
+  <meta name="twitter:title" content="MeltWebs | Solutions for the Modern Web">
+  <meta name="twitter:description" content="From highly interactive JavaScript to static pages, MeltWebs custom builds websites to fit business needs.">
+  <meta name="twitter:image" content="https://mjm.herokuapp.com/images/MeltWebs_Logo_3.0.svg">
+  <meta name="twitter:image:alt" content="MeltWebs Logo">
   <title>MeltWebs | Solutions for the Modern Web</title>
   <link rel="icon" href="images/MeltWebs_Logo_3.0_Icon.png" />
   <link rel="stylesheet" href="main.css">
