--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="twitter:site" content="@elmeltone">
   <meta name="twitter:title" content="MeltWebs | Solutions for the Modern Web">
   <meta name="twitter:description" content="From highly interactive JavaScript to static pages, MeltWebs custom builds websites to fit business needs.">
-  <meta name="twitter:image" content="https://mjm.herokuapp.com/images/MeltWebs_Logo_3.0.svg">
+  <meta name="twitter:image" content="http://mjm.herokuapp.com/images/MeltWebs_Logo_3.0.svg">
   <meta name="twitter:image:alt" content="MeltWebs Logo">
   <title>MeltWebs | Solutions for the Modern Web</title>
   <link rel="icon" href="images/MeltWebs_Logo_3.0_Icon.png" />
