Adds Open Graph to home page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:title" content="MeltWebs | Solutions for the Modern Web" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://meltwebs.com" />
+  <meta property="og:image" content="http://meltwebs.com/images/MeltWebs_Logo_3.0_Icon.png" />
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@elmeltone">
   <meta name="twitter:title" content="MeltWebs | Solutions for the Modern Web">
