--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="MeltWebs | Solutions for the Modern Web" />
+  <meta property="og:description" content="Specializing in JavaScript web development with the MERN stack, MeltWebs offers webpage creation, site enhancements and repairs, search engine optimization, and mobile interfaces for iOS and Android." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://meltwebs.com" />
   <meta property="og:image" content="http://meltwebs.com/images/MeltWebs_Logo_3.0_Icon.png" />
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@elmeltone">
-  <meta name="twitter:title" content="MeltWebs | Solutions for the Modern Web">
-  <meta name="twitter:description" content="From highly interactive JavaScript to static pages, MeltWebs custom builds websites to fit business needs.">
-  <meta name="twitter:image" content="http://mjm.herokuapp.com/images/MeltWebs_Logo_3.0.svg">
-  <meta name="twitter:image:alt" content="MeltWebs Logo">
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="400" />
+  <meta property="og:image:height" content="300" />
   <title>MeltWebs | Solutions for the Modern Web</title>
   <link rel="icon" href="images/MeltWebs_Logo_3.0_Icon.png" />
   <link rel="stylesheet" href="main.css">
