--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta property="og:url" content="http://meltwebs.com" />
   <meta property="og:image" content="http://meltwebs.com/images/MeltWebs_Logo_3.0.png" />
   <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="96" />
+  <meta property="og:image:height" content="96" />
   <title>MeltWebs | Solutions for the Modern Web</title>
   <link rel="icon" href="images/MeltWebs_Logo_3.0_Icon.png" />
   <link rel="stylesheet" href="main.css">
