--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@elmeltone" />
   <meta name="twitter:title" content="MeltWebs | Solutions for the Modern Web" />
   <meta name="twitter:description" content="Specializing in JavaScript web development with the MERN stack, MeltWebs offers webpage creation, site enhancements and repairs, search engine optimization, and mobile interfaces for iOS and Android." />
-  <meta name="twitter:image" content="http://meltwebs.com/images/MeltWebs_Logo_3.0.jpg" />
+  <meta name="twitter:image:src" content="http://meltwebs.com/images/MeltWebs_Logo_3.0.jpg" />
   <meta name="twitter:image:alt" content="MeltWebs Logo" />
   <meta property="og:title" content="MeltWebs | Solutions for the Modern Web" />
   <meta property="og:description" content="Specializing in JavaScript web development with the MERN stack, MeltWebs offers webpage creation, site enhancements and repairs, search engine optimization, and mobile interfaces for iOS and Android." />
