--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="MeltWebs | Solutions for the Modern Web" />
   <meta name="twitter:description" content="Specializing in JavaScript web development with the MERN stack, MeltWebs offers webpage creation, site enhancements and repairs, search engine optimization, and mobile interfaces for iOS and Android." />
-  <meta name="twitter:image:src" content="http://meltwebs.com/images/MeltWebs_Logo_3.0.jpg" />
+  <meta name="twitter:image:src" content="http://www.meltwebs.com/images/MeltWebs_Logo_3.0.jpg" />
   <meta name="twitter:image:alt" content="MeltWebs Logo" />
   <meta property="og:title" content="MeltWebs | Solutions for the Modern Web" />
   <meta property="og:description" content="Specializing in JavaScript web development with the MERN stack, MeltWebs offers webpage creation, site enhancements and repairs, search engine optimization, and mobile interfaces for iOS and Android." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://meltwebs.com" />
-  <meta property="og:image" content="http://meltwebs.com/images/MeltWebs_Logo_3.0.jpg" />
+  <meta property="og:image" content="http://www.meltwebs.com/images/MeltWebs_Logo_3.0.jpg" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="96" />
   <meta property="og:image:height" content="96" />
