--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>MeltWebs | Solutions for the Modern Web</title>
+  <meta name="description" content="Specializing in JavaScript web development with the MERN stack, MeltWebs offers webpage creation, site enhancements and repairs, search engine optimization, and mobile interfaces for iOS and Android.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="twitter:card" content="summary" />
@@ -14,10 +16,9 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://meltwebs.com" />
   <meta property="og:image" content="http://meltwebs.com/images/MeltWebs_Logo_3.0.jpg" />
-  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:type" content="image/jpg" />
   <meta property="og:image:width" content="96" />
   <meta property="og:image:height" content="96" />
-  <title>MeltWebs | Solutions for the Modern Web</title>
   <link rel="icon" href="images/MeltWebs_Logo_3.0_Icon.png" />
   <link rel="stylesheet" href="main.css">
 </head>
