--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Privacy Policy | MeltWebs</title>
+  <meta name="description" content="Specializing in JavaScript web development with the MERN stack, MeltWebs offers webpage creation, site enhancements and repairs, search engine optimization, and mobile interfaces for iOS and Android.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MeltWebs | Privacy Policy</title>
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Privacy Policy | MeltWebs" />
+  <meta name="twitter:description" content="Specializing in JavaScript web development with the MERN stack, MeltWebs offers webpage creation, site enhancements and repairs, search engine optimization, and mobile interfaces for iOS and Android." />
+  <meta name="twitter:image:src" content="http://www.meltwebs.com/images/MeltWebs_Logo_3.0.jpg" />
+  <meta name="twitter:image:alt" content="MeltWebs Logo" />
+  <meta property="og:title" content="MeltWebs | Solutions for the Modern Web" />
+  <meta property="og:description" content="Specializing in JavaScript web development with the MERN stack, MeltWebs offers webpage creation, site enhancements and repairs, search engine optimization, and mobile interfaces for iOS and Android." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://meltwebs.com/pages/privacy.html" />
+  <meta property="og:image" content="http://meltwebs.com/images/MeltWebs_Logo_3.0.jpg" />
+  <meta property="og:image:type" content="image/jpg" />
+  <meta property="og:image:width" content="96" />
+  <meta property="og:image:height" content="96" />
   <link rel="icon" href="../images/MeltWebs_Logo_3.0_Icon.png" />
   <link rel="stylesheet" href="../main.css">
 </head>
